[gd_scene load_steps=30 format=3 uid="uid://bx0gmlj5qodcr"]

[ext_resource type="Script" path="res://screens/scripts/create_room_screen.gd" id="1_mh16i"]
[ext_resource type="Texture2D" uid="uid://c6hryfrcuwu7c" path="res://screens/assets/character_selection_screen.png" id="2"]
[ext_resource type="FontFile" uid="uid://be5qc06kpexri" path="res://screens/assets/font_hey_comic.ttf" id="3"]
[ext_resource type="StyleBox" uid="uid://b30bs5s5c0w4h" path="res://screens/themes/style_background_choose_character_1.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://dwg1hroebhex" path="res://screens/assets/icons/Item5.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b7cfub8gyhs5i" path="res://screens/assets/icons/Icon_ArrowLeft.png" id="8"]
[ext_resource type="StyleBox" uid="uid://hymg1p7kcjdm" path="res://screens/themes/style_background_choose_character_3.tres" id="11"]
[ext_resource type="Texture2D" uid="uid://binbu4h6ddy41" path="res://screens/assets/icons/Icon_X.png" id="12"]

[sub_resource type="StyleBoxTexture" id="1"]

[sub_resource type="LabelSettings" id="2"]
font = ExtResource("3")
font_size = 42

[sub_resource type="LabelSettings" id="3"]
font = ExtResource("3")
font_size = 30

[sub_resource type="StyleBoxTexture" id="5"]
texture = ExtResource("7")
expand_margin_left = 15.0
expand_margin_top = 5.0
expand_margin_right = 15.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="6"]
texture = ExtResource("7")
expand_margin_left = 15.0
expand_margin_top = 5.0
expand_margin_right = 15.0
expand_margin_bottom = 5.0
modulate_color = Color(0.37881, 0.125048, 0.064938, 1)

[sub_resource type="Theme" id="7"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.184314, 0.180392, 0.14902, 1)
Button/font_sizes/font_size = 27
Button/fonts/font = ExtResource("3")
Button/styles/hover = SubResource("5")
Button/styles/normal = SubResource("6")
Button/styles/pressed = SubResource("6")

[sub_resource type="LabelSettings" id="8"]
font = ExtResource("3")
font_size = 30

[sub_resource type="LabelSettings" id="9"]
line_spacing = 0.0
font = ExtResource("3")
font_size = 26
shadow_size = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ub7t"]
texture = ExtResource("7")
modulate_color = Color(0.454902, 0.156863, 0.0862745, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vxto"]
texture = ExtResource("7")

[sub_resource type="Theme" id="Theme_cfbhx"]
default_font = ExtResource("3")
Button/colors/font_color = Color(0.188235, 0.184314, 0.14902, 1)
Button/styles/hover = SubResource("StyleBoxTexture_6ub7t")
Button/styles/normal = SubResource("StyleBoxTexture_7vxto")
Button/styles/pressed = SubResource("StyleBoxTexture_7vxto")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lo7hr"]
texture = ExtResource("8")
modulate_color = Color(0.313726, 0.670588, 0.847059, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ogxxm"]
texture = ExtResource("8")

[sub_resource type="Theme" id="Theme_7o61l"]
Button/styles/hover = SubResource("StyleBoxTexture_lo7hr")
Button/styles/normal = SubResource("StyleBoxTexture_ogxxm")
Button/styles/pressed = SubResource("StyleBoxTexture_lo7hr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5jxv8"]
texture = ExtResource("12")
modulate_color = Color(0.513726, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_krymv"]
texture = ExtResource("12")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o0epc"]
texture = ExtResource("12")
modulate_color = Color(0.313726, 0.670588, 0.847059, 1)

[sub_resource type="Theme" id="Theme_6fqng"]
Button/styles/hover = SubResource("StyleBoxTexture_5jxv8")
Button/styles/normal = SubResource("StyleBoxTexture_krymv")
Button/styles/pressed = SubResource("StyleBoxTexture_o0epc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x7m28"]
texture = ExtResource("7")
modulate_color = Color(0.454902, 0.156863, 0.0862745, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3egep"]
texture = ExtResource("7")

[sub_resource type="Theme" id="Theme_opewf"]
default_font = ExtResource("3")
Button/colors/font_color = Color(0.188235, 0.184314, 0.14902, 1)
Button/styles/hover = SubResource("StyleBoxTexture_x7m28")
Button/styles/normal = SubResource("StyleBoxTexture_3egep")
Button/styles/pressed = SubResource("StyleBoxTexture_3egep")

[node name="CreateRoomScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mh16i")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1440.0
offset_bottom = 810.0
texture = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1440.0
offset_bottom = 800.0
size_flags_vertical = 0

[node name="MarginTop" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="LabelTeam" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/normal = SubResource("1")
label_settings = SubResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginLeft" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="PanelCharacterCat" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterCat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Gatos Hackers"
label_settings = SubResource("3")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
color = Color(0.768627, 0.764706, 0.729412, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.462745, 0.388235, 1)

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer/ColorRect2/ColorRect"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.768627, 0.764706, 0.729412, 1)
theme_override_font_sizes/font_size = 80
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
color = Color(0.768627, 0.764706, 0.729412, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.462745, 0.388235, 1)

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer/ColorRect3/ColorRect"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.768627, 0.764706, 0.729412, 1)
theme_override_font_sizes/font_size = 80
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
color = Color(0.768627, 0.764706, 0.729412, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer/ColorRect4"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.462745, 0.388235, 1)

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/HBoxContainer/ColorRect4/ColorRect"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.768627, 0.764706, 0.729412, 1)
theme_override_font_sizes/font_size = 80
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SelectCatsButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("7")
text = "Selecionar"

[node name="PanelCharacterDog" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("11")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterDog"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Cachorros Vigilantes"
label_settings = SubResource("8")
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
color = Color(0.768627, 0.764706, 0.729412, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.462745, 0.388235, 1)

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer/ColorRect2/ColorRect"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.768627, 0.764706, 0.729412, 1)
theme_override_font_sizes/font_size = 80
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
color = Color(0.768627, 0.764706, 0.729412, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.462745, 0.388235, 1)

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer/ColorRect3/ColorRect"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.768627, 0.764706, 0.729412, 1)
theme_override_font_sizes/font_size = 80
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
color = Color(0.768627, 0.764706, 0.729412, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer/ColorRect4"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.462745, 0.388235, 1)

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/HBoxContainer/ColorRect4/ColorRect"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.768627, 0.764706, 0.729412, 1)
theme_override_font_sizes/font_size = 80
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SelectDogsButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("7")
text = "Selecionar"

[node name="MarginRight" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
text = "Sala criada! Chame seus amigos para "
label_settings = SubResource("9")
horizontal_alignment = 1
vertical_alignment = 2

[node name="StartButton" type="Button" parent="VBoxContainer/Label"]
layout_mode = 0
offset_left = 575.0
offset_top = 50.0
offset_right = 875.0
offset_bottom = 128.0
theme = SubResource("Theme_cfbhx")
theme_override_font_sizes/font_size = 40
text = "Começar"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1440.0
offset_bottom = 119.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 39

[node name="ReturnButton" type="Button" parent="HBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme = SubResource("Theme_7o61l")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 39
theme_override_constants/margin_right = 45

[node name="ExitButton" type="Button" parent="HBoxContainer2/MarginContainer2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_6fqng")
theme_override_font_sizes/font_size = 59

[node name="JoinRoomButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 577.0
offset_top = 579.0
offset_right = 877.0
offset_bottom = 657.0
theme = SubResource("Theme_opewf")
theme_override_font_sizes/font_size = 40
text = "Entrar"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://characters/scenes/cats/character_bola_de_pelos.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacterCat/VBoxContainer/SelectCatsButton" to="." method="_on_select_cats_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelCharacterDog/VBoxContainer/SelectDogsButton" to="." method="_on_select_dogs_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Label/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/MarginContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="HBoxContainer2/MarginContainer2/ExitButton" to="." method="_on_exit_button_pressed"]
